fix design on mobile phones

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -11,10 +11,16 @@ body {
 .header > h1 {
 	margin-bottom: 0.1em
 }
-.main {
+.content {
 	background-color: #f1f1f1;
 	text-align: left;
 	padding: 10px;
 	margin-top: 7px;
 	font-size: 12px;
+}
+@media only screen and (max-width:500px) {
+	/* For mobile phones: */
+	.content ul {
+		padding-left: 10px;
+	}
 }
